finished prelim framework for .frontpage

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
-layout: page 
+layout: blank 
 ---
-
-<h2 style="margin-top:10vh">How do you feel</h2>
-Haha wow
+<frontpage>
+<h2>How do you feel</h2>
+<p>Haha wow</p>
+</frontpage>
