finished prelim commit for homepage

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 layout: blank 
 ---
 <frontpage>
-<h2>How do you feel</h2>
-<p>Haha wow</p>
+<div class="fpheading">
+<h2 style="margin:0 2em 0 0;">Welcome</h2>
+<div><a href="/archive">Archive</a>&emsp;·&emsp;<a href="/about">About</a>&emsp;·&emsp;<a href="/atom.xml">RSS</a></div>
+</div>
+<p>I believe we should all write at least once at some point in life. It's a good test to know how well you actually <i>know</i> something. This blog is merely a repository of mine to motivate myself to write and create.</p>
+
+<p>The site is partially written in Indonesian.</p>
 </frontpage>
